Fix autocomplete z-index for gene search edge case, pull upstream Ideogram refinements

--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -418,9 +418,12 @@ label {
   z-index: 500;
 }
 
-/* Ensures autocomplete is never hidden behind other elements */
+/*
+* Ensures autocomplete is never hidden behind other elements,
+* except loading model (z-index 1050, per Bootstrap default)
+*/
 .ui-autocomplete.ui-front {
-  z-index: 1100;
+  z-index: 1040;
 }
 
 .gene-panel {
